--- a/stylesheet.css
+++ b/stylesheet.css
@@ -326,7 +326,7 @@ p, li {
   width: 100%;
   height: 200px;
   border-radius: 18px;
-  object-fit: fill;
+  object-fit: cover;
   margin-bottom: 80px;
   box-shadow: 0 8px 20px rgba(0,0,0,0.1);
 }
